# bencode-hpy

./: .clang-format  .gitignore  _bencode.pyi  a.py  pyproject.toml  readme.md  req.txt  setup.py  taskfile.yaml
.github/workflows/: _build_wheels.yaml  build.yaml  tests.yaml
bencode_hpy.egg-info/: PKG-INFO  SOURCES.txt
src/bencode3/: __init__.pyi  bencode.c  decode.c  encode.c  version.h
src/bencode_hpy/: .ignore  __init__.py  bencode.c  decode.c  encode.c  version.h
tests/: conftest.py  leak.py  test_decode.py  test_encode.py  test_torrent.py
